Fix for weird resize stretch

--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,12 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
 body {
     background-color: rgba($color: #1e1e1e, $alpha: 1.0);
 }
 
+canvas {
+    width: 100%;
+    height: 100%;
+}
